--- a/itta-bab-frontend/src/asset/resetcss.css
+++ b/itta-bab-frontend/src/asset/resetcss.css
@@ -9,6 +9,12 @@ Author: Youni
     --basic-yellow: #F8D729; /* 노랑색 */
     --active-button: #89F56C; /* 연초록 */
     --unactive-button: #D9D9D9; /* 회색 */
+    --white : #FFF; /* 흰색*/
+    --background-color : #FCF4CA; /* 배경 노랑*/
+    --gray-font : #A3A3A3; /* 회색 글씨*/
+}
+*{
+    margin: auto;
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
