--- a/itta-bab-frontend/src/views/user/styles/SignUp.css
+++ b/itta-bab-frontend/src/views/user/styles/SignUp.css
@@ -235,3 +235,8 @@ input[type="date"], [type="number"] {
     flex-direction: column;
     gap: 10px;
 }
+
+#phone1, #phone2, #phone3 {
+    display: flex;
+    padding-right: 20px;
+}
