feat: 사용자 신고 목록 api 연동

--- a/itta-bab-frontend/src/assets/css/resetcss.css
+++ b/itta-bab-frontend/src/assets/css/resetcss.css
@@ -17,6 +17,7 @@ Author: Youni
     --gray-input : #F4F4F4; /* 입력 받는 회색 칸*/
     --semi-red : #FF5F5F; /*다홍색(mypage)*/
     --real-red : #FF0202; /* 찐 빨강 */
+    --sky-blue : #6AA7ED; /* 하늘색 */
     --active-green : #71EC75; /* 활동중 초록*/
 
 }
